2010-04-07  Chris Morley

	* src/formats/fingerprintformat.cpp: add option to output
	hexadecimal fingerprints only, as requested by Francesco Napolitano. 

2010-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (findFiles): Don't split on tabs or
	spaces. These are legal characters for directories. (This causes
	problems with Mac users in particular.)

2010-04-04 Chris Morley

	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add a scrollbar on the options
	panel, so that the GUI can be used with wide, shallow windows (an
	unfortunate current fashion).

2010-04-01 Chris Morley

	* windows-vc2008: Add new Distribution folder and copy the external
	dlls and libs. Rewrite Windows installer for CMake VC2008 build.
	Uses more wild cards and so should be less prone to omissions.
	Folders windows-vc2005 and windowsOBF will be deleted, but have not
	been yet.	

2010-03-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (SetCoordinates): Fix bug in SetCoordinates -- copy
	from externally-supplied double* to _c. Renamed parameter to avoid
	this problem. Fixes PR#2975148. Thanks to Paul Mortenson.

>>>>>>> .r3669
2010-03-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h: Fix "unused parameter" warnings for GCC.

2010-03-26 Chris Morley

	* src/obmolecformat.cpp: Make --separate work with multiple input
	  molecules. Fixes #2961144

2010-03-23 Chris Morley
	
	Segregate the molecules that failed inchiwrite so that there are
	no failures using Samples.txt but all fail with SamplesFail.txt.
	Similarly with SamplesTechManFail.txt. The majority of failures
	are stereochemistry.
	 
	* include/openbabel/alias.h, src/alias.cpp: reorganize the error
	messages in ExpandAlias. 

	* src/formats/mdlformat.cpp: changes in description so GUI displays
	options better.

2010-03-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/obmolecformat.h, src/ops/unique.cpp: Fix